--- a/app/src/main/res/layout/activity_main_detail_operation.xml
+++ b/app/src/main/res/layout/activity_main_detail_operation.xml
@@ -302,6 +302,19 @@
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
 
+                        <Button
+                            android:id="@+id/afficher_image_details"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Afficher image"
+                            android:textStyle="bold"
+                            android:backgroundTint="#F6F6F6"
+                            android:textColor="#0091FF"
+                            android:visibility="gone"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
                         <androidx.cardview.widget.CardView
                             android:id="@+id/cardView2"
                             android:layout_width="wrap_content"
