--- a/app/src/main/res/layout/fragment_assistant_home.xml
+++ b/app/src/main/res/layout/fragment_assistant_home.xml
@@ -20,9 +20,18 @@
             android:id="@+id/assistant_home_serach"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginHorizontal="10dp"
-            android:layout_marginTop="15dp"
             android:src="@drawable/baseline_search_24"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="15dp"
+            app:layout_constraintTop_toTopOf="@+id/assistant_home_accueil"
+            app:tint="@color/white" />
+
+        <ImageView
+            android:id="@+id/assistant_home_accueil"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_margin="15dp"
+            android:src="@drawable/baseline_menu_24"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:tint="@color/white" />
