--- a/app/src/main/res/layout/fragment_assistant_operation_mtn.xml
+++ b/app/src/main/res/layout/fragment_assistant_operation_mtn.xml
@@ -103,24 +103,27 @@
                             app:layout_constraintStart_toStartOf="@+id/textView20"
                             app:layout_constraintTop_toBottomOf="@+id/textView20" />
 
-                        <TextView
+                        <Button
                             android:id="@+id/historiqueMtn"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Solde et historique"
+                            android:text="Historique"
                             android:textColor="#038DF6"
                             android:textStyle="bold"
+                            android:backgroundTint="@color/white"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="@+id/textView20" />
 
-                        <TextView
+                        <Button
                             android:id="@+id/openSMSMtn"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="SMS MTN Money"
-                            android:layout_marginTop="25dp"
+                            android:layout_marginTop="5dp"
+                            android:backgroundTint="@color/white"
+                            android:text="Lire SMS"
                             android:textColor="#038DF6"
                             android:textStyle="bold"
+                            app:layout_constraintEnd_toEndOf="@+id/historiqueMtn"
                             app:layout_constraintStart_toStartOf="@+id/historiqueMtn"
                             app:layout_constraintTop_toBottomOf="@+id/historiqueMtn" />
 
